--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "build": "sketch build",
     "format": "prettier --trailing-comma es5 --write 'src/**/*.js'",
-    "gen": "swagen sdk ../tpl-service/openapi.yml",
+    "gen": "swagen sdk ./openapi.yml",
     "lint": "sketch lint src",
     "release": "standard-version",
     "start": "bin/json-server.js",
